--- a/css/header.css
+++ b/css/header.css
@@ -41,3 +41,25 @@
   width: 100%;
   height: 0.1rem;
 }
+
+@media (max-width: 700px) {
+  .header {
+    padding: 1rem;
+  }
+  .nav {
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .nav {
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+  .nav_menu {
+    flex-direction: column;
+  }
+}
