--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
   display: flex;
   gap: 2rem;
   color: var(--primary-color);
+  max-width: fit-content;
 }
 
 .main_content h1::before {
@@ -28,8 +29,42 @@
   padding: 1rem;
 }
 
+.main_content .soft_skills .soft_skills_list {
+  justify-content: center;
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
 .main_content .soft_skills span {
   border: 1px solid;
   display: inline-block;
   padding: 0.5rem;
+}
+
+@media (max-width: 820px) {
+  .main_content .description h1 {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .main_content {
+    padding: 1rem;
+  }
+
+  .main_content .description h1 {
+    font-size: 2rem;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+
+  .main_content .description h1::before {
+    width: 100%;
+    height: 0.2rem;
+  }
+  .main_content .soft_skills {
+    margin: 2rem 0;
+  }
 }
