--- a/css/section-contact.css
+++ b/css/section-contact.css
@@ -1,8 +1,14 @@
 section#contact {
   max-width: 100vw;
-  margin: 0 auto;
-  padding: 4rem 2rem;
+  height: 50vh;
   background-color: var(--secondary-color);
+  display: grid;
+  place-items: center;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .contact_title {
@@ -15,6 +21,7 @@ section#contact {
   justify-content: center;
   margin: 2rem 0;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .contact_links a {
@@ -31,9 +38,23 @@ section#contact {
 .contact_info {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .contact_info .phone {
   display: flex;
   gap: 1rem;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 700px) {
+  .contact_info .phone {
+    gap: 0;
+  }
+}
+
+@media (max-width: 450px) {
+  .contact_title {
+    font-size: 2rem;
+  }
 }
