--- a/css/section-qualifications.css
+++ b/css/section-qualifications.css
@@ -35,3 +35,24 @@ section#qualifications {
 .curse a:hover {
   border-color: #fff;
 }
+
+@media (max-width: 820px) {
+  .qualifications_title {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 700px) {
+  section#qualifications {
+    padding: 1rem;
+  }
+  .qualifications_title {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .curses_list {
+    grid-template-columns: 1fr;
+  }
+}
