--- a/css/section-qualifications.css
+++ b/css/section-qualifications.css
@@ -6,7 +6,7 @@ section#qualifications {
 
 .qualifications_title {
   font-size: 6rem;
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 .curses_list {
