--- a/css/section-contact.css
+++ b/css/section-contact.css
@@ -37,19 +37,14 @@ section#contact {
 
 .contact_info {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
-}
-
-.contact_info .phone {
-  display: flex;
   gap: 1rem;
-  flex-wrap: wrap;
 }
 
 @media (max-width: 700px) {
-  .contact_info .phone {
-    gap: 0;
+  .contact_info {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
