--- a/css/section-contact.css
+++ b/css/section-contact.css
@@ -4,6 +4,7 @@ section#contact {
   background-color: var(--secondary-color);
   display: grid;
   place-items: center;
+  margin-top: 2rem;
 }
 
 .container {
@@ -46,9 +47,6 @@ section#contact {
     flex-direction: column;
     align-items: center;
   }
-}
-
-@media (max-width: 450px) {
   .contact_title {
     font-size: 2rem;
   }
