--- a/css/section-projects.css
+++ b/css/section-projects.css
@@ -71,10 +71,17 @@ a.project_title:hover {
   background-color: var(--primary-color);
 }
 
-@media (max-width: 450px) {
+@media (max-width: 820px) {
+  .projects_title {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 700px) {
   section#projects {
     grid-template-columns: 1fr;
     padding: 1rem;
+    gap: 0;
   }
   .projects_title {
     font-size: 2rem;
