--- a/css/global.css
+++ b/css/global.css
@@ -27,6 +27,19 @@ h5 {
   margin: 0;
 }
 
+h1 {
+  font-size: 5rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1rem;
+  font-weight: normal;
+}
+
 a {
   text-decoration: none;
 }
