--- a/css/header.css
+++ b/css/header.css
@@ -4,14 +4,14 @@
   padding: 2rem 1rem;
 }
 
-.nav {
-  display: flex;
-}
-
 .nav_title {
   text-transform: uppercase;
-  flex: 1;
-  font-size: 1.5rem;
+  text-align: center;
+  margin: 1rem 0;
+}
+
+.nav {
+  display: flex;
 }
 
 .nav_menu {
