--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,9 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .nav_title {
@@ -45,6 +48,7 @@
 @media (max-width: 700px) {
   .header {
     padding: 1rem;
+    flex-direction: column;
   }
   .nav {
     flex-direction: column;
