Fix projects section title size in media queries

--- a/css/section-projects.css
+++ b/css/section-projects.css
@@ -93,3 +93,9 @@ a.project_title:hover {
     margin-top: 2rem;
   }
 }
+
+@media (max-width: 450px) {
+  .projects_title {
+    font-size: 2rem;
+  }
+}
