Fix contact section title size in media queries

--- a/css/section-contact.css
+++ b/css/section-contact.css
@@ -54,6 +54,12 @@ section#contact {
     align-items: center;
   }
   .contact_title {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .contact_title {
     font-size: 2rem;
   }
 }
