--- a/css/header.css
+++ b/css/header.css
@@ -25,17 +25,15 @@
 .nav_menu .nav_menu_item a {
   text-decoration: none;
   color: var(--primary-color);
-  padding: 1rem 0 1rem 1rem;
   font-size: 1rem;
 }
 
 .nav_menu .nav_menu_item::after {
   content: "";
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   display: block;
   width: 0;
   height: 0.1rem;
-  transition: 0.15s ease;
 }
 
 .nav_menu .nav_menu_item:hover::after {
