--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
   text-align: center;
 }
 
-.main_content .soft_skills h3 {
+.main_content .soft_skills .soft_skills_title {
   font-size: 2rem;
   margin: 2rem 0;
 }
@@ -63,10 +63,8 @@
     width: 100%;
     height: 0.2rem;
   }
-  .main_content .soft_skills {
-  }
 
-  .main_content .soft_skills h3 {
+  .main_content .soft_skills .soft_skills_title {
     font-size: 1.5rem;
   }
 }
