--- a/css/section-projects.css
+++ b/css/section-projects.css
@@ -21,6 +21,10 @@ section#projects {
   color: var(--primary-color);
 }
 
+.project_title {
+  font-size: 1.5rem;
+}
+
 .project {
   border: 0.2rem solid var(--secondary-color);
   padding: 2rem;
@@ -39,7 +43,7 @@ section#projects {
   font-weight: bold;
 }
 
-.project_title {
+.project_link {
   color: var(--primary-color);
   font-size: 1rem;
   font-weight: bold;
@@ -47,13 +51,13 @@ section#projects {
   display: inline-block;
 }
 
-a.project_title {
+a.project_link {
   cursor: pointer;
   border-bottom: 0.1rem solid;
   border-color: transparent;
 }
 
-a.project_title:hover {
+a.project_link:hover {
   border-color: #000;
 }
 
