--- a/css/section-qualifications.css
+++ b/css/section-qualifications.css
@@ -22,6 +22,10 @@ section#qualifications {
   position: relative;
 }
 
+.curse_title {
+  font-size: 1.5rem;
+}
+
 .curse a {
   display: inline-block;
   margin-top: 1rem;
