--- a/css/section-projects.css
+++ b/css/section-projects.css
@@ -7,18 +7,66 @@ section#projects {
   gap: 2rem;
 }
 
-.project_list {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-}
-
 .projects_title {
   font-size: 5rem;
   word-break: break-all;
   writing-mode: vertical-lr;
   max-width: 4ch;
   color: var(--primary-color);
+}
+
+.filter_title {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+}
+
+.filter_list {
+  display: flex;
+  flex-direction: column;
+}
+
+.filter_buttons {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.filter_buttons li {
+  background-color: rgb(244, 247, 246);
+  border: 0.1rem solid;
+}
+
+.filter_buttons li label {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+}
+
+.filter_buttons li label:hover {
+  cursor: pointer;
+}
+
+input[value="all"]:checked ~ .filter_buttons li[data-label="Todos"],
+input[value="2021"]:checked ~ .filter_buttons li[data-label="2021"],
+input[value="2022"]:checked ~ .filter_buttons li[data-label="2022"] {
+  background-color: var(--primary-color);
+  color: var(--tertiary-color);
+}
+
+input[value="2021"]:checked
+  ~ .project_list
+  .project:not([data-category~="2021"]),
+input[value="2022"]:checked
+  ~ .project_list
+  .project:not([data-category~="2022"]) {
+  display: none;
+}
+
+.project_list {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
 
 .project_title {
@@ -29,6 +77,7 @@ section#projects {
   border: 0.2rem solid var(--secondary-color);
   padding: 2rem;
   position: relative;
+  grid-column: 1 / -1;
 }
 
 .project_year {
@@ -95,6 +144,10 @@ a.project_link:hover {
   }
   .project_list {
     margin-top: 2rem;
+  }
+  .filter_buttons {
+    margin-top: 1rem;
+    margin-bottom: 0;
   }
 }
 
