--- a/css/section-contact.css
+++ b/css/section-contact.css
@@ -1,10 +1,12 @@
 section#contact {
-  max-width: 100vw;
-  height: 50vh;
+  width: 100vw;
+  max-width: 1200px;
   background-color: var(--secondary-color);
   display: grid;
   place-items: center;
+  margin: 0 auto;
   margin-top: 2rem;
+  padding: 3rem 0;
 }
 
 .container {
